# MaakLang

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN_BRIEF.md  LANGUAGE.md  LICENSE  README.md  ROADMAP.md  vocab.ron
MaakSwift/: build-xcframework.sh
MaakSwift/Maak/Maak/: Audio.swift  ContentView.swift  Editor.swift  Highlight.swift  Item.swift  MaakApp.swift  Palette.swift  Schildpad.swift
MaakSwift/Maak/Maak.xcodeproj/: project.pbxproj
MaakSwift/Maak/MaakTests/: MaakTests.swift
MaakSwift/Maak/MaakUITests/: MaakUITests.swift  MaakUITestsLaunchTests.swift
MaakSwift/SchildpadFFI/SchildpadFFI.xcframework/: Info.plist
MaakSwift/SchildpadFFI/SchildpadFFI.xcframework/ios-arm64/Headers/: module.modulemap  schildpad.h
MaakSwift/SchildpadFFI/include/: schildpad.h
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: command.rs  engine.rs  env.rs  error.rs  expr.rs  fixed.rs  frame.rs  highlight.rs  lexer.rs  lib.rs  resolve.rs  rng.rs  value.rs  vocab.rs
ffi-c/: Cargo.toml
ffi-c/src/: lib.rs
prototype/: README.md  Schildpad.html  schildpad-chrome.jsx  schildpad-editor.jsx  schildpad-font.js  schildpad-keyboard.jsx  schildpad-lang.js  schildpad-turtle.js
