[package]
name = "schildpad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Schildpad dev CLI: run a program, render the framebuffer as ASCII, print the event trace."

[[bin]]
name = "schildpad"
path = "src/main.rs"

[dependencies]
schildpad-core = { path = "../core" }
